<resources>
    <string name="app_name">RealTime</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password_button">Forgot username or password?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_save">Save Location</string>
    <string name="notify_late">You were late! Setting alarm 5 minutes earlier for next time.</string>
    <string name="notification_channel_id">alarmnotificationid</string>
    <string name="notification_channel_name">RealTime</string>
    <string name="notification_channel_desc">Sends notifications with their status</string>
    <string name="notify_wake">Wake up!</string>

</resources>
